#################################################
#
#  (C) 2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( PROGRAMS
    dcoptool-oldparser.kmdr examples.kmdr
  DESTINATION ${DATA_INSTALL_DIR}/kmdr-editor/editor )
