SUBDIRS = 


# Provide a example XSLT scripts : testdoc.xsl and empty.xsl
commondata = test1.xml test2.xml test3.xml test4.xml \
	    test_import.xsl test_include_bot.xsl test_include_top.xsl \
	    testdoc.dtd testdoc.xml testdoc.xsl \
	    empty.xsl empty.xml
 

kxsldbgdir = ${kde_datadir}/kxsldbg
kxsldbg_DATA = ${commondata}


xsldbgdir = ${kde_datadir}/xsldbg
xsldbg_DATA =  ${commondata}
