if include_qextmdi
KMDI_SUBDIR = kmdi
endif

if include_knewstuff
KNEWSTUFF_SUBDIR = knewstuff
endif


SUBDIRS = $(KMDI_SUBDIR) $(KNEWSTUFF_SUBDIR)

#enable the below when there is something in the compatibility lib
#noinst_LTLIBRARIES = libcompat.la
#libcompat_la_SOURCES = 

#AM_CPPFLAGS = $(all_includes)
METASOURCES = AUTO
