#################################################
#
#  (C) 2010-2011 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

# FIXME cvsservice is not ported

add_subdirectory( csseditor )
add_subdirectory( framewizard )
add_subdirectory( tableeditor )
add_subdirectory( debugger )
# add_subdirectory( cvsservice )
